# HasamiShogi

./: .gitignore  CMakeLists.txt  README.txt  Sources
SDL2-2.0.5/: Makefile  Makefile.rules  config.status  libtool
src/: App  App.c  App.h  App.h.gch  App_old.c  Board.c  Board.h  Board.java  Board2.c  Board2.h  Game.c  Game.h  GoodSave  IA.c  IA.h  Makefile  Piece.c  Piece.h  ReadMe.txt  Rules.c  Rules.h  SaveSystem.c  TestBoard.c  TestGame.c  TestRules.c  massif.out.12308  massif.out.14473  massif.out.14691  massif.out.5585  massif.out.5730  massif.out.6049  massif.out.6104  massif.out.7279  rules.txt
src/headers/: App.h  Board.h  Game.h  IA.h  Rules.h  SaveSystem.h  Types.h
src/includes/: Board2.h  IA.h  Rules.h
src/resources/: Rules.txt
src/ressources/: lang.c
